--- a/pipeline/Snakefile
+++ b/pipeline/Snakefile
@@ -1,12 +1,12 @@
-# AutoRNA main Snakefile (QC-only workflow)
+# AutoRNA main Snakefile (QC + Alignment)
 
-# Load config from project root
 configfile: "../config.yaml"
 
 SAMPLES = config["samples"]
 
 rule all:
     input:
-        expand("data/qc/{sample}_fastp.json", sample=SAMPLES)
+        expand("data/aligned/{sample}.bam", sample=SAMPLES)
 
 include: "rules/qc.smk"
+include: "rules/align.smk"
